--- a/app/src/main/res/layout/settings_layout.xml
+++ b/app/src/main/res/layout/settings_layout.xml
@@ -82,6 +82,7 @@
         android:textColor="@android:color/white"
         android:textSize="18sp" />
 
+
     <RelativeLayout
         android:id="@+id/setup_focus"
         android:layout_width="match_parent"
@@ -99,7 +100,7 @@
             android:fontFamily="sans-serif-medium"
             android:paddingStart="3dp"
             android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+            android:paddingBottom="12dp"
             android:text="@string/Start"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
@@ -128,7 +129,7 @@
             android:fontFamily="sans-serif-medium"
             android:paddingStart="3dp"
             android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+            android:paddingBottom="12dp"
             android:text="@string/End"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
@@ -154,5 +155,21 @@
             android:layout_below="@id/end_time"
             android:layout_marginTop="16dp" />
     </RelativeLayout>
+
+    <Switch
+        android:id="@+id/remind_focus_lost"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/setup_focus"
+        android:background="@drawable/ripple_bg_transparent"
+        android:drawableLeft="@drawable/ic_focus"
+        android:drawablePadding="24dp"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center_vertical"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:text="@string/focus_lost"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
 </RelativeLayout>
