--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,12 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowFullscreen">true</item>
-        <item name="android:windowShowWallpaper">true</item>
+        <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
+    <style name="FullscreenLauncherTheme" parent="FullscreenTheme">
+        <item name="android:windowShowWallpaper">true</item>
     </style>
 
     <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Light.NoActionBar">
