--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -10,7 +10,7 @@
         android:id="@+id/circular_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="56dp"
         android:layout_centerHorizontal="true"
         app:direction="clockwise"
         app:dotWidth="15dp"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:includeFontPadding="false"
-        android:textColor="@color/black_30"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:layout_alignTop="@id/circular_progress"
         android:layout_alignBottom="@id/circular_progress"
