--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -12,20 +12,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
+        <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/status_bar"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:gravity="center|end"
             android:layout_height="40dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:layout_alignParentEnd="true"
+            android:textSize="16dp"
+            android:drawableStart="@drawable/ic_battery_60_black_24dp"
+            android:textColor="@android:color/black"
+            android:fontFamily="sans-serif-smallcaps"
             android:layout_alignParentTop="true" />
 
         <FrameLayout
             android:id="@+id/content_holder"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/status_bar"
-            android:layout_alignParentBottom="true"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp" />
+            android:layout_alignParentBottom="true" />
 
 
 
