--- a/app/src/main/res/layout/launcher_item.xml
+++ b/app/src/main/res/layout/launcher_item.xml
@@ -3,7 +3,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/app_item"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="110dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp">
