--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">@android:color/holo_green_light</color>
+    <color name="colorPrimaryDark">@android:color/holo_green_dark</color>
     <color name="white_30">#1AFFFFFF</color>
     <color name="black_30">#B3000000</color>
+    <color name="black_70">#D6000000</color>
     <color name="black_10">#1A000000</color>
     <color name="red">@android:color/holo_red_light</color>
     <color name="green">@android:color/holo_green_dark</color>
